--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,12 @@ cmake_minimum_required(VERSION 3.26)
 project(Chip_8_emulator)
 
 set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_VERBOSE_MAKEFILE ON)
 
-add_executable(Chip_8_emulator main.cpp
-        Core.cpp
-        Core.h
-        opcode.cpp
-        opcode.h
-)
+find_package(SDL2 REQUIRED)
+include_directories(${SDL2_INCLUDE_DIRS})
+
+add_executable(${PROJECT_NAME})
+target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARIES})
+
+add_subdirectory(src)
